[gd_scene format=3 uid="uid://4rsod6aak2wy"]

[ext_resource type="Script" uid="uid://3dht6rffkckf" path="res://scenes/demo.gd" id="1_4m101"]
[ext_resource type="PackedScene" uid="uid://bxe2yr7j7bayj" path="res://scenes/NumberLabel/NumberLabel.tscn" id="1_aq2v5"]
[ext_resource type="PackedScene" uid="uid://c8x3yr2j7bayj" path="res://scenes/NumberLabel/PopNumberLabel.tscn" id="3_j1kok"]
[ext_resource type="Texture2D" uid="uid://chlxvwmtf2gic" path="res://icon.svg" id="4_icon"]
[ext_resource type="PackedScene" uid="uid://dnfpyaqun3rrt" path="res://scenes/DamageDisplay/damage_display.tscn" id="5_damage"]

[sub_resource type="RectangleShape2D" id="rect_shape"]
size = Vector2(64, 64)

[node name="Demo" type="Node2D" unique_id=58519486]
script = ExtResource("1_4m101")

[node name="NumberLabel" parent="." unique_id=329065228 instance=ExtResource("1_aq2v5")]
position = Vector2(23, 21)

[node name="PopNumberLabel" parent="." unique_id=1849827208 instance=ExtResource("3_j1kok")]
position = Vector2(55, 89)

[node name="PlusOne" type="Button" parent="." unique_id=1861996722]
offset_left = 318.0
offset_top = 38.0
offset_right = 360.0
offset_bottom = 69.0
text = "+1"

[node name="PlusHundred" type="Button" parent="." unique_id=994301873]
offset_left = 319.0
offset_top = 77.0
offset_right = 364.0
offset_bottom = 108.0
text = "+100"

[node name="SpawnFloat" type="Button" parent="." unique_id=725149323]
offset_left = 318.0
offset_top = 120.0
offset_right = 400.0
offset_bottom = 151.0
text = "Spawn"

[node name="SpawnSpecial" type="Button" parent="." unique_id=1540737790]
offset_left = 318.0
offset_top = 160.0
offset_right = 430.0
offset_bottom = 191.0
text = "Spawn Special"

[node name="ChannelTextInput" type="LineEdit" parent="." unique_id=2016892754]
offset_left = 28.0
offset_top = 222.0
offset_right = 160.0
offset_bottom = 253.0
text = "CHANNELING"
placeholder_text = "Enter text..."

[node name="SpawnChannel" type="Button" parent="." unique_id=474974739]
offset_left = 318.0
offset_top = 222.0
offset_right = 450.0
offset_bottom = 253.0
text = "Spawn Channel"

[node name="DummyTarget" type="Area2D" parent="." unique_id=9484383]
position = Vector2(270, 480)

[node name="Sprite2D" type="Sprite2D" parent="DummyTarget" unique_id=1958350258]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_icon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DummyTarget" unique_id=382186283]
shape = SubResource("rect_shape")

[node name="DamageDisplay" parent="." unique_id=1570294775 instance=ExtResource("5_damage")]
position = Vector2(270, 480)

[connection signal="pressed" from="PlusOne" to="." method="_on_plus_one_pressed"]
[connection signal="pressed" from="PlusHundred" to="." method="_on_plus_hundred_pressed"]
[connection signal="pressed" from="SpawnFloat" to="." method="_on_spawn_float_pressed"]
[connection signal="pressed" from="SpawnSpecial" to="." method="_on_spawn_special_pressed"]
[connection signal="pressed" from="SpawnChannel" to="." method="_on_spawn_channel_pressed"]
[connection signal="input_event" from="DummyTarget" to="." method="_on_dummy_target_input_event"]
[connection signal="mouse_exited" from="DummyTarget" to="." method="_on_dummy_target_mouse_exited"]
